--- a/1.ai-as-a-service/notebooks/azure_ai_inference_api_python.ipynb
+++ b/1.ai-as-a-service/notebooks/azure_ai_inference_api_python.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
    "outputs": [],
    "source": [
     "%pip install azure-ai-inference"
@@ -27,7 +31,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,16 +51,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "As of the latest data, there are approximately 7,117 living languages in the world today. However, this number is constantly changing due to factors like language evolution, extinction, and the development of new dialects. It's also important to note that the exact number can vary depending on the criteria used to define a distinct language.\n"
-     ]
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from azure.ai.inference.models import SystemMessage, UserMessage\n",
     "\n",
@@ -77,18 +81,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Mistral-large Response: As of the most recent data, there are approximately 7,117 living languages in the world today. This number is constantly changing due to factors like language extinction and the development of new languages or dialects. However, it's important to note that this is an estimate, as it can be difficult to define exactly what constitutes a distinct language versus a dialect.\n",
-      "------------------------------------------------------------------------------------\n",
-      "Model Phi-3.5-MoE-instruct Response:  Estimating the number of languages in the world can be complex due to varying definitions of what constitutes a language versus a dialect. However, according to Ethnologue, a comprehensive reference work cataloging all of the known living languages, there are currently around 7,139 living languages spoken globally. This number is constantly changing as languages evolve, merge, or unfortunately, become extinct. UNESCO provides a slightly different estimate, with approximately 2,500 languages at risk of disappearing. It's important to note that new languages may also emerge over time. The total number of languages spoken worldwide can vary depending on the criteria used for distinguishing between languages and dialects. Always refer to reliable, up-to-date sources for the most accurate information.\n"
-     ]
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "response_mistral = model.complete(\n",
     "    messages=[\n",
@@ -115,9 +113,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
   "language_info": {
    "codemirror_mode": {
